# CI-CD-Workspace-Setup-2026

./: .gitignore  Makefile  cli.py  notes.md  pyproject.toml  readme.md  requirements.txt  writing-yaml.md
.github/workflows/: testing-ci.yaml
ci_cd_workspace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ci_cd_workspace.egg-info/: SOURCES.txt
