[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_cd_workspace"
version = "0.1.0"
description = "Flat ML project with CLI runner"
authors = [
    { name="Your Name", email="your_email@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pytest",
    "pylint",
    "black"
]

[project.scripts]
ci-install = "cli:install"
ci-test = "cli:test"
ci-lint = "cli:lint"
ci-format = "cli:format"
ci-all = "cli:all"

[tool.setuptools]
py-modules = ["cli"]